css/globalStyle.scss
* {
  box-sizing: border-box;
}
body {
  overflow-x: hidden;
}
@font-face {
  font-family: Panton;
  src: url(../font/panton/Panton-BlackCaps.otf);
}

body {
  margin: 0;
  padding: 0;
}

// ..............global classes.....................Start
.family_panton {
  font-family: Panton;
}
.cup {
  cursor: pointer;
}
.overflow_hidden {
  overflow: hidden;
}
.active_nav {
  color: #ffc0b1 !important;
}
.bg_transparent {
  background: transparent;
}
.font_size_65 {
  font-size: 65px;
  @media (max-width: 991px) {
    font-size: 45px;
    @media (max-width: 767px) {
      font-size: 35px;
    }
  }
}
.font_size_35 {
  font-size: 35px;
  @media (max-width: 991px) {
    font-size: 25px;
    @media (max-width: 767px) {
      font-size: 20px;
    }
  }
}
.font_size_60 {
  font-size: 60px;
  @media (max-width: 991px) {
    font-size: 45px;
    @media (max-width: 767px) {
      font-size: 35px;
    }
  }
}
.font_size_25 {
  font-size: 25px;
  @media (max-width: 991px) {
    font-size: 18px;
    @media (max-width: 767px) {
      font-size: 15px;
    }
  }
}
.font_size_16 {
  font-size: 16px;
  @media (max-width: 991px) {
    font-size: 14px;
  }
}
.font_size_50 {
  font-size: 50px;
  @media (max-width: 991px) {
    font-size: 40px;
    @media (max-width: 767px) {
      font-size: 30px;
    }
  }
}
.font_size_18 {
  font-size: 18px;
  @media (max-width: 991px) {
    font-size: 16px;
  }
}
.font_size_140 {
  font-size: 140px;
  @media (max-width: 991px) {
    font-size: 100px;
  }
}
.font_size_30 {
  font-size: 30px;
  @media (max-width: 991px) {
    font-size: 25px;
  }
}
.font_size_45 {
  font-size: 45px;
  @media (max-width: 991px) {
    font-size: 30px;
    @media (max-width: 767px) {
      font-size: 25px;
    }
  }
}
.font_size_40 {
  font-size: 40px;
  @media (max-width: 991px) {
    font-size: 30px;
    @media (max-width: 767px) {
      font-size: 20px;
    }
  }
}

.font_size_13 {
  font-size: 13px;
}
.font_size_11 {
  font-size: 11px;
}
.font_size_20 {
  font-size: 20px;
  @media (max-width: 991px) {
    font-size: 16px;
    @media (max-width: 767px) {
      font-size: 14px;
    }
  }
}
.font_size_42 {
  font-size: 42px;
}
.font_size_15 {
  font-size: 15px;
}
.bg_orange {
  background: #ff623f;
}
.text_orange {
  color: #ff623f;
}
.text_orange2{
  color: #FFB6B6;
}
.text_success {
  color: #24a6a2;
}
.bg_footer {
  background: #174343;
}
.text_title_footer {
  color: #9efff0;
}
.text_facebook {
  color: #546ce9 !important;
}
.text_twitter {
  color: #31a8ff !important;
}
.text_dribbble {
  color: #eb5091 !important;
}
.bg_success {
  background: #24a6a2;
}
.bg_checkmark {
  background: #1b8382;
}
.content_shadow {
  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 1));
}
.z_1000 {
  z-index: 1000;
}
.text_title {
  color: #342b50 !important;
}
.text_blackGray {
  color: #413c48;
}
.text_black7 {
  color: #516677;
}
.text_gray {
  color: #a5adb6;
}
.text_gray2 {
  color: #717d8a;
}
.text_gray3 {
  color: #8f8f8f;
}
.text_gray4 {
  color: #e9f7fe;
}
.text_black8 {
  color: rgba(0, 0, 0, 0.82);
}
.rounded_10 {
  border-radius: 10px;
}
.rounded_45 {
  border-radius: 45px;
}
.w_h_133 {
  width: 133px;
  height: 133px;
}
.social_size {
  width: 40px;
  height: 40px;
}
.checkmarch_size {
  width: 95px;
  height: 95px;
}
.space_h_500 {
  height: 500px;
  @media (max-width: 991px) {
    height: 300px;
  }
}
.border_orange {
  border: 1px solid #fe5e3b;
}
.border_success {
  border: 1px solid #26a2a0;
}
.line_144 {
  line-height: 144%;
}
.text_unset {
  text-transform: unset;
}
.dashed_hr {
  border: 1px dashed #000000;
  opacity: 0.2;
  height: 0px !important;
  margin: 25px 0;
}
.scale_half {
  transform: scale(0.5);
}

// ..............global classes.....................End

